--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<script src="index.js">defer</script>
+    <script src="index.js">defer</script>
     <link rel="stylesheet" href="index.css">
     <title>Accueil</title>
 </head>
 <body>
+    <h1>Accueil</h1>
     <div class="container">
     </div>
     
